@@ -353,3 +353,4 @@ MigrationBackup/
 .idea
 
 .vscode/
+AurorasLoennPlugin.zip
